--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
     margin: 0px;
     font-family: 'Barlow', sans-serif;
+    overflow: hidden;
 }
 
 .header {
@@ -493,7 +494,7 @@ p.link:hover::after {
 }
 
 .navigation input:checked~.menu {
-    right: 0;
+    right: -50rem;
 }
 
 .creatives {
@@ -510,6 +511,7 @@ p.link:hover::after {
 .creativeplusarrow {
     width: 100%;
     text-align: center;
+
 }
 
 
@@ -558,6 +560,10 @@ p.link:hover::after {
         margin-right: 25px;
         position: absolute;
         padding-right: 1.5rem;
+    }
+
+    .creativeplusarrow {
+        margin-top: 9.5rem;
     }
 
     .menu li {
